--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -1,11 +1,11 @@
 # Configure main menu and social menu
-[[main]]
-identifier = "home"
-name = "Home"
-url = "/"
-[main.params]
-icon = "home"
-newtab = true
+#[[main]]
+#identifier = "home"
+#name = "Home"
+#url = "/"
+#[main.params]
+#icon = "home"
+#newtab = true
 
 [[social]]
 identifier = "github"
@@ -21,4 +21,4 @@ name = "LinkedIn"
 url = "https://www.linkedin.com/in/mariosimoni/"
 
 [social.params]
-icon = "brand-twitter"
+icon = "linkedin-icon"
